# gql-gateway

./: .gitignore  mypy.ini  pyproject.toml  xschema.graphql
gateway/: context.py  dataloader.py  generate.py  schema.generated.graphql  schema.graphql
gateway/author/: __init__.py  dtos.py  mappers.py  service.py
gateway/book/: __init__.py  dtos.py  mappers.py  service.py
gateway/client/author/: __init__.py  abc.py  client.py  dtos.py
gateway/client/book/: __init__.py  abc.py  client.py
gateway/client/page/: dtos.py
gateway/context/: __init__.py  context.py  factory.py
gateway/core/: __init__.py  app.py  node.py  schema.py
gateway/core/resolvers/: __init__.py  author.py  base.py  book.py  node.py  query.py
gateway/dataloader/: registry.py
gateway/dataloaders/: __init__.py  author.py  base.py  book.py  registry.py
gateway/graphene/: app.py  context.py  dataloaders.py  models.py  schema.py
gateway/graphene/schema/: __init__.py  author.py  book.py  node.py  page.py  query.py  schema.py
gateway/repository/: __init__.py  fixtures.py  models.py
gateway/service/: context.py  context_factory.py
gateway/service/author/: __init__.py  client.py  mappers.py  service.py
gateway/service/book/: __init__.py  client.py  mappers.py  service.py
gateway/sql/: context.py  factory.py  fixtures.py  models.py
gateway/strawberry/: app.py  info.py
gateway/strawberry/schema/: __init__.py  _lazy.py  _types.py  author.py  book.py  node.py  page.py  query.py  schema.py
gateway/util/: collector.py  cursor.py  dataclass.py  goi.py  graphql.py  promise.py  resource.py
gateway/web/: __init__.py  aiohttp.py  app.py  flask.py  myview.py
tests/: conftest.py  test_dataloader.py  utils.py
tests/aio/: test_aio.py
tests/author/: test_author_dtos.py  test_author_service.py
tests/book/: test_book_service.py
tests/client/author/: test_author_dtos.py  test_dtos.py
tests/client/page/: test_dtos.py
tests/dataloaders/: test_base.py
tests/graphene/: query_author.graphql  test_schema.py
tests/graphene/schema/: test_author.py  test_page.py
tests/graphql/: conftest.py  query_book.graphql  query_node__author.graphql  test_schema.py
tests/repository/: test_repository.py
tests/service/author/: test_author_service.py
tests/service/book/: test_book_service.py
tests/sql/: test_sql.py
tests/strawberry/schema/: test_author.py  test_page.py
tests/util/: dataclass.py  test_cursor.py  test_dataclass.py
