[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Devin Fee <devin@devinfee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
graphene = "^3.1.1"
python = "^3.8"
aiodataloader = "^0.2.1"

[tool.poetry.group.test.dependencies]
black = "^22.10.0"
ipdb = "^0.13.9"
ipython = "^8.5.0"
isort = "^5.10.1"
mypy = "^0.982"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.20.1"
