[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Devin Fee <devin@devinfee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
black = "^22.10.0"
flask = "1.1.1"
graphene = "^3.1.1"
graphql-server = { extras = ["flask"], version = "^3.0.0b5" }
itsdangerous = "2.0.1"
jinja2 = "2.11.3"
markupsafe = "2.0.1"
promise = "^2.3"
python = "^3.8"
sqlalchemy = { extras = ["mypy"], version = "^1.4.42" }
werkzeug = "2.0.3"
marshmallow = "^3.18.0"
marshmallow-dataclass = "^8.5.9"
strawberry-graphql = { extras = ["debug-server"], version = "^0.140.0" }
dataclasses-json = "^0.5.7"

[tool.poetry.group.test.dependencies]
ipdb = "^0.13.9"
ipython = "^8.5.0"
isort = "^5.10.1"
mypy = "^0.982"
pylint = "^2.15.5"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.20.1"
pytest-snapshot = "^0.9.0"

[tool.poetry.scripts]
serve_core = "gateway.core.app:serve"
serve_graphene = "gateway.graphene.app:serve"
serve_strawberry = "gateway.strawberry.app:serve"
